--- a/Relatório/index.html
+++ b/Relatório/index.html
@@ -76,7 +76,7 @@
         <div class="col-lg-12 px-5" id="diretos">
           <h3><strong>2.1 Método direto</strong></h3>
           <h5><i>2.1.1 Método de eliminação de Gauss</i></h5>
-          <p class="test">
+          <p>
             Neste procedimento, o sistema de equações lineares é manipulado algebricamente, até que apresente  a forma
             de uma matriz triangular superior. Esta matriz é então resolvida com o uso da substituição regressiva. O 
             procedimento para determinar a matriz triangular superior é bem simples, e de fácil programação em um 
@@ -116,81 +116,295 @@
             $$t(n) = n + \sum\limits_{i = 1}^{n - 1}(n) - \sum\limits_{i = 1}^{n - 1}(i) = n + n(n - 1) - \frac{n(n-1)}{2} = n^2 - \frac{n(n-1)}{2}$$
             logo
             $$t(n) = \frac{n(n + 1)}{2}$$
+            Este método pode apresentar algumas dificuldades com a sua aplicação. A primeira dificuldade é encontrada quando um dos
+            elementos pivô é igual a zero, pois no processo de substituição das linhas, dividimos a linha pivô pelo coeficiente pivô e,
+            caso o coeficiente seja igual a zero, essa divisão é impossível. E a segunda dificuldade, é encontrada quando um dos elementos
+            pivô é pequeno em relação aos demais coeficientes da linha pivô. Os dois problemas podem ser resolvidos com o uso de uma simples técnica,
+            que é chamada de pivotação. Que consiste, basicamente, em alterar a ordem das linhas ou equações. De modo que, os coeficientes pivô
+            sejam diferentes de zero e que sejam os maiores possíveis.
           </p>
-        </div>
-        <div class="col-lg-12 px-5">
-          <h5><i>2.1.2 Fluxograma para o método de eliminação de Gauss</i></h5>
-          <p>
-            Fluxograma desenhado com base no algoritmo do método de eliminação de Gauss.
-          </p>
-          <div class="col-lg-12 text-center">
-            <img src="../Fluxogramas/MétodoDeEliminaçãoDeGauss.png" style="width: 60%;">
+          <div class="col-lg-12">
+            <h5><i>2.1.2 Fluxograma para o método de eliminação de Gauss</i></h5>
+            <p>
+              Fluxograma desenhado com base no pseudocódigo do método de eliminação de Gauss.
+            </p>
+            <div class="col-lg-12 text-center">
+              <img src="../Fluxogramas/MétodoDeEliminaçãoDeGauss.png" style="width: 50%;">
+            </div>
+          </div>
+          <div class="col-lg-12 py-3">
+            <h5><i>2.1.3 Pseudocódigo para o método de eliminação de Gauss</i></h5>
+            <div class="col-lg-10 code">
+              <pre>
+                <code>
+    1.  /* 
+    2.   * Pseudocódigo para o método de eliminação de Gauss
+    3.   * 
+    4.   * 'matrix' é a matriz de entrada 
+    5.   *
+    6.   * Matriz escolhida (estendida)
+    7.   * m = [[ 4,  -2,   -3,   6,   12], # Matriz estendida
+    8.   *      [-6,   7,  6.5,  -6, -6.5],
+    9.   *      [ 1, 7.5, 6.25, 5.5,   16],
+    10.  *      [-12, 22, 15.5,  -1,   17] ]
+    11.  * 
+    12.  * 'matrix_gauss' é a matrix de saída
+    13.  * uma matriz triangular superior
+    14.  *
+    15.  *
+    16.  * 
+    17.  */
+    18.  
+    19.  Inicio algoritmo
+    20.  
+    21.    // Método de eliminação de Gauss
+    22.    FUNÇÃO gauss(matrix)
+    23.      // Criando uma copia do parâmetro de entrada
+    24.      matrix_gauss = FAÇA_UMA_CÓPIA_DE(matrix) 
+    25.      // A eliminação começa na "linha 1" (que na verdade é a linha 2)
+    26.      line = 1
+    27.      // Coluna inicial
+    28.      a = 0
+    29.      // Percorrendo (n - 1) linhas da matriz. Começando a partir da segunda linha.
+    30.      PARA (matrix_gauss.num_of_lines - 1) VEZES FAÇA
+    31.        // "Salvando" o número da linha
+    32.        line_before = line
+    33.        // Número de linhas que serão utilizadas nas operações.
+    34.        num_of_interations = matrix_gauss.num_of_lines - line
+    35.        PARA num_of_interations VEZES FAÇA
+    36.          Line_line = Line_line - m_{linea a} * Line_a
+    37.          // Mudando para a próxima linha
+    38.          line += 1
+    39.        FIM PARA
+    40.        // Linha retorna para a posição inicial mais 1.
+    41.        line = line_before + 1
+    42.        // Mudando de coluna
+    43.        a += 1
+    44.      FIM PARA
+    45.      // Retornando o resultado
+    46.      matrix_gauss
+    47.    FIM FUNÇÃO
+    48.  
+    49.  Fim algoritmo
+                </code>
+              </pre>
+            </div>
           </div>
         </div>
-        <div class="col-lg-12 mx-5">
-          <h5 class="py-2"><i>2.1.3 Pseudocódigo para o método de eliminação de Gauss</i></h5>
-          <div class="col-lg-9 code mx-5">
-            <pre>
-              <code>
-  /* Matriz escolhida (estendida)
-  * m = [[ 8,   -4,    0, -1,    0,    0,  20],
-  *      [ 0, -2.5,  4.5,  0,    0,   -2,  14],
-  *      [ 0,   -5,    0, -2,  8.5, -1.5, -30],
-  *      [-4, 11.5, -2.5,  0,   -5,    0, -12],
-  *      [-1,    0,    0,  3,   -2,    0,   8],
-  *      [ 0,    0,   -2,  0, -1.5,    8,   0]]
-  * 
-  * Solução numérica estimada
-  * (como não possuo nenhuma estimativa inicial, todas as incógnitas são iguais a zero)
-  * initial_solution = [0, 0, 0, 0, 0, 0]
-  *
-  * Erro escolhido (e) = 0.000001
-  * 
-  * A variável 'ite' foi utilizada com contador de iterações
-  * Quando o método 'gauss_seidel' é chamado, ite = 0
-  */
-
-  Inicio algoritmo
-
-    // Método de eliminação de Gauss
-    FUNÇÃO self.gauss(matrix)
-      // Criando uma copia do parãmetro de entrada
-      matrix_gauss = FAÇA_UMA_CÓPIA_DE(matrix) 
-      // A eliminação começa na "linha 1" (que na verdade é a linha 2)
-      line = 1
-      // Coluna inicial
-      a = 0
-      // Percorrendo (n - 1) linhas da matriz. Começando a partir da segunda linha.
-      PARA (matrix_gauss.num_of_lines - 1) VEZES FAÇA
-        // "Salvando" o número da linha
-        line_before = line
-        // Número de linhas que serão utilizadas nas operações.
-        num_of_interations = matrix_gauss.num_of_lines - line
-        PARA num_of_interations VEZES FAÇA
-          m = matrix_gauss.element(line, a).to_f / matrix_gauss.element(a, a)
-          line_i = multiplies(m, vector(matrix_gauss, a))
-          line_d = vector(matrix_gauss, line)
-          line_d = difference(line_d, line_i)
-          matrix_gauss.line(line, line_d.line(0))
-          // Mudando para a próxima linha
-          line += 1
-        end
-        // Linha retorna para a posição inicial mais 1.
-        line = line_before + 1
-        // Mudando de coluna
-        a += 1
-      end
-      // Retornando o resultado
-      matrix_gauss
-    FIM FUNÇÃO
-
-  Fim algoritmo
-              </code>
-            </pre>
-          </div>
-        </div>
+        
         <div class="col-lg-12 px-5" id="iterativos">
           <h3><strong>2.2 Métodos iterativos</strong></h3>
+          <p>
+            Em métodos iterativos, as soluções de sistemas são encontradas a partir da forma explícita da equações, onde
+            cada incógnita é escrita em termos das demais incógnitas. O primeiro passo é escolher uma solução inicial, esta
+            é utilizada para determinar a próxima solução. Caso a nova solução não seja suficientemente precisa, será necessário
+            utiliza-la para determinar uma nova solução. O processo é repetido até que a solução encontrada seja satisfatória.
+            <br>
+            Para um sistema de $n$ equações lineares, uma condição suficiente para que a solução convirja é dada por:
+            $$|a_{ii}| > \sum\limits_{j\ =\ 1,\ j\ \neq \ i}^{j\ =\ n}|a_{ij}|$$
+            onde $a$ é um elemento da matriz de coeficientes $[a]$. Essa condição é suficiente para que a solução convirja. 
+            No entanto, não é necessária para a convergência do método iterativo.
+          </p>
+          <h5><i>2.2.1 Método de Jacobi</i></h5>
+          <p>
+            No método de Jacobi, o primeiro passo é determinar uma solução inicial, caso não se tenha nenhuma informação a respeito do sistema,
+            assumimos que todas as incógnitas são iguais a zero. A segunda estimativa de solução $x_1^{(2)}, x_2^{(2)}, \cdots, x_n^{(2)}$ é dada
+            por: 
+            $$x_i^{(2)} = \frac{1}{a_{ii}} \left[ b_i\ - \sum\limits_{j\ =\ 1}^{n} a_{ij}x_j^{(1)}\right]$$
+            com $j \neq i$ e $i = 1, 2, 3, \cdots, n$.
+            De modo geral, temos que a (k + 1)-ésima estimativa é encontrada a partir da k-ésima estimativa, usando a seguinte fórmula:
+            $$x_i^{(k + 1)} = \frac{1}{a_{ii}} \left[ b_i\ - \sum\limits_{j\ =\ 1}^{n} a_{ij}x_j^{(k)} \right]$$
+            onde $j \neq i$ e $i = 1, 2, 3, \cdots, n$. As iterações são realizadas até que o valor absoluto do erro relativo estimativo, de cada
+            uma das variáveis, seja menor que um determinado valor. Ou seja, quando
+            $$\left| \frac{x_i^{(k + 1)} - x_i^{(k)}}{x_i^{(k)}}\right| < e$$
+            onde $e$ é o valor escolhido e o índice $i = 1, 2, 3, \cdots, n$. 
+          </p>
+          <div class="col-lg-12">
+            <h5><i>2.2.2 Fluxograma para o método de Jacobi</i></h5>
+            <p>
+              Fluxograma desenhado com base no pseudocódigo do método de Jacobi. 
+            </p>
+            <div class="col-lg-12 text-center">
+              <img src="../Fluxogramas/MétodoDeJacobi.png" style="width: 80%;">
+            </div>
+          </div>
+          <div class="col-lg-12">
+            <h5><i>2.2.3 Pseudocódigo para o método de Jacobi</i></h5>
+            <div class="col-lg-10 code">
+              <pre>
+                <code>
+    1.  /* Matriz escolhida (estendida)
+    2.   * m = [[ 8,   -4,    0, -1,    0,    0,  20],
+    3.   *      [ 0, -2.5,  4.5,  0,    0,   -2,  14],
+    4.   *      [ 0,   -5,    0, -2,  8.5, -1.5, -30],
+    5.   *      [-4, 11.5, -2.5,  0,   -5,    0, -12],
+    6.   *      [-1,    0,    0,  3,   -2,    0,   8],
+    7.   *      [ 0,    0,   -2,  0, -1.5,    8,   0]]
+    8.   * 
+    9.   * Solução numérica estimada
+    10.  * (como não possuo nenhuma estimativa inicial, todas as incógnitas são iguais a zero)
+    11.  * initial_solution = [0, 0, 0, 0, 0, 0]
+    12.  *
+    13.  * Erro escolhido (e) = 0.000001
+    14.  * 
+    15.  * A variável 'ite' foi utilizada com contador de iterações
+    16.  * Quando o método 'jacobi' é chamado, ite = 0
+    17.  */
+    18.
+    19.  Inicio algoritmo
+    20.
+    21.    FUNÇÃO err_x_i(initial_solution, next_solution)
+    22.      // Vetor inicialmente vazio
+    23.      err_x_i = []
+    24.      // Percorrendo cada incógnita
+    25.      num_of_interations = tamanho_de(initial_solution)
+    26.      // A variável 'i' varia de 0 até (num_of_interations - 1)
+    27.      PARA num_of_interations VEZES, FAÇA |i|
+    28.        // Caso o erro relativo estimado seja menor que 'e' (e = 0.000001)
+    29.        SE ((next_solution[i] - initial_solution[i]) / initial_solution[i]).abs < 0.000001
+    30.          // Caso o erro da incógnita seja menor que o erro escolhido, o vetor recebe o valor lógico "true"
+    31.          err_x_i.push(true)
+    32.        SENÃO
+    33.          err_x_i.push(false) # Caso contrário, recebe "false"
+    34.        FIM SE
+    35.      FIM PARA
+    36.      RETORNE err_x_i
+    37.    FIM FUNÇÃO
+    38.
+    39.    FUNÇÃO jacobi(initial_solution, matrix, ite)
+    40.      // Contandor de iterações
+    41.      ite = ite + 1
+    42.      // Vetor que conterá a próxima solução (inicialmente vazio)
+    43.      next_solution = []
+    44.      n = matrix.num_of_lines - 1
+    45.      // A variável 'i' varia de 0 a n, ou seja, de 0 a matrix.num_of_lines - 1
+    46.      PARA CADA VALOR NO RANGE (0..n) FAÇA |i|
+    47.        next_solution.push((b_i(matrix, i) - sum(initial_solution, matrix, i, n)) / a_ij(matrix, i, i).to_f)
+    48.      FIM PARA CADA
+    49.
+    50.      // Calculando o erro de cada uma das incógnitas com a FUNÇÃO 'err_x_i'
+    51.      err_x_i = err_x_i(initial_solution, next_solution)
+    52.      // Caso o erro de uma das variáveis não atenda a condição estabelecida.
+    53.      SE err_x_i CONTÉM false 
+    54.        // Uma nova iteração é iniciada.
+    55.        jacobi(next_solution, matrix, ite)
+    56.      SENÃO
+    57.        // Caso a solução encontrada seja satisfatória
+    58.        // Retornando a solução estimada e o número de iterações
+    59.        RETORNE [next_solution, ite]
+    60.      FIM SE
+    61.    FIM FUNÇÃO
+    62.
+    63.  Fim algoritmo
+                </code>
+              </pre>
+            </div>
+          </div>
+        
+          <h5><i>2.2.4 Método de Gauss-Seidel</i></h5>
+          <p>
+            No método de Gauss-Seidel, assumimos valores iniciais para as variáveis $x_2, x_3, x_4, \cdots, x_n$. A partir
+            destes determinamos o valor de $x_1$. O valor de $x_1$ e os demais valores, escolhidos como solução inicial, são utilizados
+            para determinar o próximo valor da incógnita $x_2$. Este processo é repetido até $x_n$. Diferentemente do método de Jacobi,
+            onde os novos valores estimados para as incógnitas são utilizados apenas na próxima estimativa de solução, no método de Gauss-Seidel
+            o novo valor de uma incógnita é utilizado para determinar os valores das próximas variáveis. Ou seja, a medida que o valor de
+            uma incógnita é calculado, ele é imediatamente utilizado para determinar os demais valores.
+            <br>
+            A aplicação da equação
+            $$x_i^{(k + 1)} = \frac{1}{a_{ii}} \left[ b_i\ - \sum\limits_{j\ =\ 1}^{n} a_{ij}x_j^{(k)} \right]$$
+            no método de Gauss-Seidel, leva à formula iterativa:
+            $$x_i^{(k + 1)} = \frac{1}{a_{ii}} \left[ b_i\ - \left(\sum\limits_{j\ =\ 1}^{i - 1} a_{ij}x_j^{(k + 1)} +\sum\limits_{j\ =\ i + 1}^{n} a_{ij}x_j^{(k)}\right)\right]$$
+            com $i = 2, 3, \cdots, n - 1$. O critério de parada é o mesmo utilizado para o método de Jacobi.
+          </p>
+          <div class="col-lg-12">
+            <h5><i>2.2.5 Fluxograma para o método de Gauss-Seidel</i></h5>
+            <p>
+              Fluxograma desenhado com base no pseudocódigo do método de Gauss-Seidel. 
+            </p>
+            <div class="col-lg-12 text-center">
+              <img src="../Fluxogramas/MétodoDeGaussSeidel.png" style="width: 80%;">
+            </div>
+          </div>
+          <div class="col-lg-12">
+            <h5><i>2.2.6 Pseudocódigo para o método de Gauss-Seidel</i></h5>
+            <div class="col-lg-10 code">
+              <pre>
+                <code>
+    1.  /* Matriz escolhida (estendida)
+    2.   * m = [[ 8,   -4,    0, -1,    0,    0,  20],
+    3.   *      [ 0, -2.5,  4.5,  0,    0,   -2,  14],
+    4.   *      [ 0,   -5,    0, -2,  8.5, -1.5, -30],
+    5.   *      [-4, 11.5, -2.5,  0,   -5,    0, -12],
+    6.   *      [-1,    0,    0,  3,   -2,    0,   8],
+    7.   *      [ 0,    0,   -2,  0, -1.5,    8,   0]]
+    8.   * 
+    9.   * Solução numérica estimada
+    10.  * (como não possuo nenhuma estimativa inicial, todas as incógnitas são iguais a zero)
+    11.  * initial_solution = [0, 0, 0, 0, 0, 0]
+    12.  *
+    13.  * Erro escolhido (e) = 0.000001
+    14.  * 
+    15.  * A variável 'ite' foi utilizada com contador de iterações
+    16.  * Quando o método 'gauss_seidel' é chamado, ite = 0
+    17.  */
+    18.
+    19.  Inicio algoritmo
+    20.
+    21.    FUNÇÃO err_x_i(initial_solution, next_solution)
+    22.      // Vetor inicialmente vazio
+    23.      err_x_i = []
+    24.      // Percorrendo cada incógnita
+    25.      num_of_interations = tamanho_de(initial_solution)
+    26.      // A variável 'i' varia de 0 até (num_of_interations - 1)
+    27.      PARA num_of_interations VEZES, FAÇA |i|
+    28.        // Caso o erro relativo estimado seja menor que 'e' (e = 0.000001)
+    29.        SE ((next_solution[i] - initial_solution[i]) / initial_solution[i]).abs < 0.000001
+    30.          // Caso o erro da incógnita seja menor que o erro escolhido, o vetor recebe o valor lógico "true"
+    31.          err_x_i.push(true)
+    32.        SENÃO
+    33.          err_x_i.push(false) # Caso contrário, recebe "false"
+    34.        FIM SE
+    35.      FIM PARA
+    36.      RETORNE err_x_i
+    37.    FIM FUNÇÃO
+    38.
+    39.    FUNÇÃO gauss_seidel(initial_solution, matrix, ite)
+    40.      // Contandor de iterações
+    41.      ite = ite + 1
+    42.      // Vetor que conterá a próxima solução (inicialmente vazio)
+    43.      next_solution = FAÇA_UMA_CÓPIA_DE(initial_solution)
+    44.      n = matrix.num_of_lines - 1
+    45.      // A variável 'i' varia de 0 a n, ou seja, de 0 a matrix.num_of_lines - 1
+    46.      PARA CADA VALOR NO RANGE (0..n) FAÇA |i|
+    47.        next_solution[i] = (b_i(matrix, i) - sum(next_solution, matrix, i, n)) / a_ij(matrix, i, i).to_f
+    48.      FIM PARA CADA
+    49.      x
+    50.      // Calculando o erro de cada uma das incógnitas com a FUNÇÃO 'err_x_i'
+    51.      err_x_i = err_x_i(initial_solution, next_solution)
+    52.      // Caso o erro de uma das variáveis não atenda a condição estabelecida.
+    53.      SE err_x_i CONTÉM false 
+    54.        // Uma nova iteração é iniciada.
+    55.        gauss_seidel(next_solution, matrix, ite)
+    56.      SENÃO
+    57.        // Caso a solução encontrada seja satisfatória
+    58.        // Retornando a solução estimada e o número de iterações
+    59.        RETORNE [next_solution, ite]
+    60.      FIM SE
+    61.    FIM FUNÇÃO
+    62.
+    63.  Fim algoritmo
+                </code>
+              </pre>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container" id="resultados">
+      <div class="row justify-content-center">
+        <div class="col-lg-12">
+          <h2><strong>3. Resultados</strong></h2>
         </div>
       </div>
     </section>
